优化药水效果逻辑

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ displayName = "Props Of Doraemon" #mandatory
 # A text field displayed in the mod UI
 #credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors = "Frank__Wang, Zycddj" #optional
+authors = "Frank__Wang, Zycddj, ShootKing" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description = '''
 
