--- a/build.gradle
+++ b/build.gradle
@@ -116,11 +116,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "propsofdoraemon",
-                "Specification-Vendor"    : "Frank__Wang, Zycddj",
+                "Specification-Vendor"    : "Frank__Wang, Zycddj, ShootKing",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.version,
-                "Implementation-Vendor"   : "Frank__Wang, Zycddj",
+                "Implementation-Vendor"   : "Frank__Wang, Zycddj, ShootKing",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
