--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
 
 group = 'cn.mtpstudio'
 version = '1.0-SNAPSHOT'
@@ -39,6 +42,8 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
+            arg "-mixin.config=mixins.propsofdoraemon.json"
+
             mods {
                 propsofdoraemon {
                     source sourceSets.main
@@ -54,6 +59,8 @@ minecraft {
 
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
+
+            arg "-mixin.config=mixins.propsofdoraemon.json"
 
             mods {
                 propsofdoraemon {
@@ -92,6 +99,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.5-36.1.18'
 
+    annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
+    testAnnotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
+
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
@@ -121,9 +131,14 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.version,
                 "Implementation-Vendor"   : "Frank__Wang, Zycddj, ShootKing",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "Signing-Fingerprint"     : project.hasProperty('fingerprint') ? project.property('fingerprint') : 'unsigned',
+                "TweakClass"              : "org.spongepowered.asm.launch.MixinTweaker",
+                "TweakOrder"              : 0,
+                "MixinConfigs"            : "mixins.propsofdoraemon.json"
         ])
     }
+    rename 'mixin.refmap.json', 'propsofdoraemon.mixin-refmap.json'
 }
 
 jar.finalizedBy('reobfJar')
