--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 buildscript {
     repositories {
         //maven { url = 'http://lss233.littleservice.cn/repositories/minecraft' }
